Commit modifica HTML

--- a/ProgettoIngegneria/src/Homepage.html
+++ b/ProgettoIngegneria/src/Homepage.html
@@ -4,11 +4,10 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <link type="text/css" rel="stylesheet" href="Homepage.css">
   <title>Homepage</title>
-  <script type="text/javascript" language="javascript" src="stockwatcher/stockwatcher.nocache.js"></script>
 </head>
-<body>
-<h1>Homepage</h1>
-<h2>Informazioni generali</h2>
+<body  bgcolor="#ff7b5a">
+<h1 align='center'>Homepage</h1>
+<h2>Informazioni generali</h2> 
 <p>
 	<ul>
 		<li>Universita': Universita' di Bologna</li>
@@ -23,7 +22,7 @@
 <p>Inserisci la password:</p>
 <input type="text"><br>
 <button type="submit"> invia </button>
-<h3>Dipartimenti</h3>
+<h3 align="center">Dipartimenti</h3>
 <p>
 	I Dipartimenti sono le articolazioni organizzative dell'Uni per lo svolgimento delle funzioni relative alla ricerca scientifica e alle attivita' didattiche e formative.
 	<ul>
