Commit secondo modifica HTML

--- a/ProgettoIngegneria/src/Homepage.html
+++ b/ProgettoIngegneria/src/Homepage.html
@@ -6,6 +6,7 @@
   <title>Homepage</title>
 </head>
 <body  bgcolor="#ff7b5a">
+<img src="C:\Users\andre\OneDrive\Desktop\IngegneriaDelSoftware\ProgettoIngegneria\logouni.png" width='200' height='200' vspace='10' hspace='335'/>
 <h1 align='center'>Homepage</h1>
 <h2>Informazioni generali</h2> 
 <p>
