--- a/ProgettoIngegneria21_22/Homepage.html
+++ b/ProgettoIngegneria21_22/Homepage.html
@@ -3,11 +3,11 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <link type="text/css" rel="stylesheet" href="Homepage.css">
-  <title>Homepage</title>
+  <title>Homepage </title>
 </head>
 <body  bgcolor="#ff7b5a">
-<img src="C:\Users\andre\OneDrive\Desktop\IngegneriaDelSoftware\ProgettoIngegneria\logouni.png" width='200' height='200' vspace='10' hspace='335'/>
-<h1 align='center'>Homepage </h1>
+<img src=https://i.ibb.co/kqXKTkL/logouni.png width='200' height='200' vspace='10' hspace='335'/>
+<h1 align='center'>Homepage</h1>
 <h2>Informazioni generali</h2> 
 <p>
 	<ul>
